fix characters slider bug on IOS

--- a/src/assets/css/characters.css
+++ b/src/assets/css/characters.css
@@ -19,6 +19,7 @@
    position: relative;
    transition: transform 0.2s ease;
    overflow: auto;
+   box-shadow: 0 0 0.7rem #382610;
 }
 /*character creation card*/
 .create-blocks-container {
@@ -245,17 +246,13 @@
    padding-bottom: 1rem !important;
 }
 /*optimization for swiper*/
-.character-slide {
-   transition: transform 0.3s ease, opacity 0.3s ease;
-   pointer-events: none;
-   transform: scale(0.94) translateX(-50%);
-   opacity: 0.5;
-   z-index: 1;
-}
-
-.swiper-slide-active.character-slide {
-   pointer-events: auto;
-   transform: scale(1) translateX(0);
-   opacity: 1;
+.swiper-slide-active {
    z-index: 10;
+   transform: scale(1);
+}
+.swiper-slide {
+   transition: transform 0.3s ease, opacity 0.3s ease;
+   overflow: visible !important;
+   transform: translateZ(0);
+   will-change: transform;
 }
